--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
   --dl-size-size-maxcontent: 1414px;
   --dl-space-space-halfunit: 4px;
   --dl-space-space-tenunits: 80px;
+  --dl-color-pink-rosequartz: #d7b9c3ff;
   --dl-radius-radius-radius2: 2px;
   --dl-radius-radius-radius4: 4px;
   --dl-radius-radius-radius8: 8px;
